name:                addition
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/addition#readme
license:             BSD3
license-file:        LICENSE
author:              LSK
maintainer:          LSK
copyright:           2020 LSK
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Addition
  hs-source-dirs:      .
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,hspec,QuickCheck
  ghc-options:         -Wall -fwarn-tabs
  
