name:                chapterExercise
version:             0.1.0.0
homepage:            https://github.com/githubuser/chapterExercise#readme
license:             BSD3
license-file:        LICENSE
author:              LSK
maintainer:          LSK
copyright:           2020 LSK
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable chapterExercise
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Exercises
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,chapterExercise,QuickCheck,hspec
  ghc-options :        -Wall -fwarn-tabs

library
  exposed-modules : Exercises
  ghc-options :  -Wall -fwarn-tabs
  hs-source-dirs : src
  build-depends : base >= 4.7 && < 5, containers, QuickCheck,hspec
  default-language : Haskell2010

test-suite tests
  ghc-options :  -Wall -fno-warn-orphans
  type : exitcode-stdio-1.0
  main-is : tests.hs
  hs-source-dirs : test
  build-depends : base >= 4.7 && < 5, containers, QuickCheck,hspec,chapterExercise
  default-language :    Haskell2010