name:                monoidAssoc
version:             0.1.0.0
homepage:            https://github.com/githubuser/monoidAssoc#readme
license:             BSD3
license-file:        LICENSE
author:              LSK
maintainer:          LSK
copyright:           2020 LSK
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable monoidAssoc
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Optional
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,QuickCheck,hspec,monoidAssoc
  ghc-options: -Wall -fwarn-tabs

library
  hs-source-dirs:      src
  exposed-modules:     Optional
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5,QuickCheck,hspec
  default-language:    Haskell2010
